# PotuzhnaHistograma

./: .gitignore  CMakeLists.txt  README.md  aboutpotuzhnist.md  build.bat  build.sh
Histogram_C/: Histogram_c.c  Histogram_c.h  Histogram_test.c  Makefile
Histogram_CPP/: Histogram_cpp.cpp  Histogram_cpp.h  Histogram_cross_test.cpp  Histogram_test.cpp  Makefile
